;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.14 relative to sbcl-1.0.13:
  * new feature: SB-EXT:*EXIT-HOOKS* are called when the process exits
    (see documentation for details.)
  * revived support for OpenBSD (contributed by Josh Elsasser)
  * bug fix: (TRUNCATE X 0) when X is a bignum now correctly signals
    DIVISION-BY-ZERO. Similarly for MOD and REM (which suffered due to
    the bug in TRUNCATE.) (reported by Michael Weber)
  * bug fix: SB-SPROF:REPORT no longer signals an error if there are
    no samples. (reported by Andy Hefner)
  * bug fix: functions compiled using (COMPILE NIL '(LAMBDA ...))
    no longer appear as (NIL ...) frames in backtraces.
  * bug fix: ROOM no longer suffers from occasional (AVER (SAP=
    CURRENT END)) failures.
  * bug fix: RESOLVE-CONFLICT (and the other name conflict machinery)
    is now actually exported from SB-EXT as documented.  (reported by
    Maciej Katafiasz)
  * bug fix: sb-aclrepl now correctly understands how to inspect
    single-floats on 64-bit platforms where single-floats are not boxed.
  * bug fix: SB-MOP:CLASS-SLOTS now signals an error if the class has not
    yet been finalized. (reported by Levente Meszaros)
  * bug fix: CLOSE :ABORT T behaves more correctly on Windows.
  * DESCRIBE and (DOCUMENTATION ... 'OPTIMIZE) describe meaning of
    SBCL-specific optimize qualities.

changes in sbcl-1.0.13 relative to sbcl-1.0.12:
  * minor incompatible change: RUN-PROGRAM now uses execvp(3) to find
    an executable in the search path, and does so in the child
    process's PATH.  The function FIND-EXECUTABLE-IN-SEARCH-PATH has
    been removed; it can be found in the CVS history, for somebody who
    needs that search behavior (see the manual).
  * minor incompatible change: compiler policy re. weakening type
    checks has changed: now type checks are weakened on if SAFETY < 2
    and SAFETY < SPEED.
  * SB-EXT:NATIVE-NAMESTRING takes a new keyword AS-FILE, forcing