@@ -1,6 +1,6 @@
 ;;; compiling and disassembling this used to give
 ;;;
-;;;    WARNING: bogus form-number in form!  The source file has probably 
+;;;    WARNING: bogus form-number in form!  The source file has probably
 ;;;    been changed too much to cope with.
 ;;;
 ;;; but the symptoms have disappeared.
